fixing and alignment

--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
   padding: 0;
   margin: 0;
 }
-.cursor-view{
+body {
+  background-color: whitesmoke;
+}
+.cursor-view {
   cursor: pointer;
+}
+.measure {
+  list-style: none;
+  list-style-type: square;
 }
